--- a/index.html
+++ b/index.html
@@ -1,102 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-
-  <link href="css/options.css" rel="stylesheet">
-
-  <link href="bootstrap-3.3.2-dist/css/bootstrap.css" rel="stylesheet">
-
-  <link href="jquery/ui/jquery-ui.min.css" rel="stylesheet">
-  <link href="d3lib/d3.css" rel="stylesheet">
-
-  <script src="d3lib/d3.v3.min.js"></script>
-  <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-  <script src="jquery/ui/external/jquery/jquery.js"></script>
-  <script src="jquery/ui/jquery-ui.min.js"></script>
-  <script src="bootstrap-3.3.2-dist/js/bootstrap.js"></script>
-  <title>Options</title>
+    <meta http-equiv="refresh" content="0; url=./web">
 </head>
-
-<body>
-
-<div class='container'>
-
-
-
-<h2>FIRST FINANCE Institute - Black-Scholes & Greeks</h2>
-<hr />
-
-<div class="col-xs-5" style="display: flex">
-	<div class="col-xs-4" style="background-color:#f9f9f9;border:solid 1px black;padding:10px;border-radius:5px;margin-right:4px">
-		<label>Parameters</label>
-    <div class="line-separator"></div>
-		<label id="Strike">Strike = <span></span></label><div id="sliderStrike" style="width: 100%"></div><br>
-		<label id="Maturity">Maturity = <span></span></label><div id="sliderMaturity" style="width: 100%"></div><br>
-		<label id="R">R = <span></span>%</label><div id="sliderR" style="width: 100%"></div><br>
-		<label id="Q">Q = <span></span>%</label><div id="sliderQ" style="width: 100%"></div><br>
-    <label id="Volatility">Volatility = <span></span>%</label><div id="sliderVol" style="width: 100%"></div><br>
-		<label id="Spot">Spot = <span></span></label><div id="sliderSpot" style="width: 100%"></div>
-	</div>
-
-
-	<div class="col-xs-8" style="background-color:#f9f9f9;border:solid 1px black;padding:10px;border-radius:5px;padding:10px;">
-		<label>Prices</label>
-    <div class="line-separator"></div>
-		
-    <div class="col-xs-6" style="background-color:#f9f9f9;padding:10px;border-radius:5px;padding:10px;">
-        <p id="Drift">Drift = <span></span>%</p>
-    </div>
-    <div class="col-xs-6" style="background-color:#f9f9f9;padding:10px;border-radius:5px;padding:10px;">
-        <p id="spotForward">Forward = <span></span></p>
-    </div>
-
-    <div class="col-xs-4" style="background-color:#f9f9f9;padding:10px;border-radius:5px;padding:10px;">
-        <p></p>
-        <p>Premium</p>
-        <p>Premium(%)</p>
-        <p>Delta</p>
-        <p>Gamma</p>
-        <p>Vega</p>
-        <p>Rho</p>
-    </div>
-
-    <div class="col-xs-4" style="background-color:#f9f9f9;padding:10px;border-radius:5px;padding:10px;">
-        <p></p>
-        <p id="callPremium"><span></span></p>
-    	 	<p id="callPremiumPct"><span></span></p>
-    		<p id="callDelta"><span></span></p>
-        <p id="callGamma"><span></span></p>
-        <p id="callVega"><span></span></p>
-        <p id="callRho"><span></span></p>
-    </div>
-
-    <div class="col-xs-4" style="background-color:#f9f9f9;padding:10px;border-radius:5px;padding:10px;">
-        <p></p>
-        <p id="putPremium"><span></span></p>
-        <p id="putPremiumPct"><span></span></p>
-        <p id="putDelta"><span></span></p>
-        <p id="putGamma"><span></span></p>
-        <p id="putVega"><span></span></p>
-        <p id="putRho"><span></span></p>
-    </div>
-
-	 </div>
-
-
-  </div>
-
-<div id="mainGraph" class="col-sm-7">
-
-</div>
-<hr/>
-
-
-
-
-
-
-
-
-<script type="text/javascript" src="js/formules.js"></script>
-<script type="text/javascript" src="js/options.js"></script>
+</html>
