--- a/web/index.html
+++ b/web/index.html
@@ -22,68 +22,71 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <h1>FIRST FINANCE Institute: Black-Scholes and Greeks</h1>
+            <h1>Black-Scholes and Greeks</h1>
             <p><dfn>Understanding how option pricing works!</dfn></p>
         </div>
     </div>
 
     <div class="row">
         <div class="col-xs-6">
-            <div id="divParameters" class="panel panel-primary" style="display: block">
+            <div id="divParameters" class="panel panel-default" style="display: block">
                 <div class="panel-heading">
-                    <button id="btnReset" class="btn btn-primary btn-xs pull-right"><i class="fa fa-undo" aria-hidden="true"></i>
+                    <button id="btnReset" class="btn btn-default btn-xs pull-right"><i class="fa fa-undo"
+                                                                                       aria-hidden="true"></i>
                     </button>
                     <h3 class="panel-title">Parameters</h3>
                 </div>
                 <div class="panel-body">
-                    <form class="col-xs-6" role="form">
+                    <form class="col-xs-12" role="form">
                         <div class="form-group">
                             <label id="Stock">Stock Price (S) = <span>100</span> $</label>
                             <div id="sliderStock"></div>
                         </div>
-                        <div class="form-group">
-                            <label id="Risk">Risk-Free Rate (r) = <span>0.0</span>%</label>
-                            <div id="sliderRisk"></div>
-                        </div>
-                        <div class="form-group">
-                            <label id="Maturity">Time to Maturity (τ) = <span>2.5</span> Years</label>
-                            <div id="sliderMaturity"></div>
-                        </div>
-                    </form>
-                    <form class="col-xs-6" role="form">
+                        <input id="sliderStocki" type="range" min="1" max="200" step="1" value="100"/>
+
                         <div class="form-group">
                             <label id="Strike">Strike Price (K) = <span>100</span> $</label>
                             <div id="sliderStrike"></div>
                         </div>
+                        <input id="sliderStrikei" type="range" min="1" max="200" step="1" value="100"/>
+
                         <div class="form-group">
-                            <label id="Dividend">Annual Dividend Yield (q) = <span>0.0</span>%</label>
+                            <label id="Risk">Risk-Free Rate (r) = <span>0.0</span>%</label>
+                            <div id="sliderRisk"></div>
+                        </div>
+                        <input id="sliderRiski" type="range" min="-0.01" max="0.1" step="0.001" value="0"/>
+
+                        <div class="form-group">
+                            <label id="Dividend">Dividend Yield (q) = <span>0.0</span>%</label>
                             <div id="sliderDividend"></div>
                         </div>
+                        <input id="sliderDividendi" type="range" min="0" max="0.05" step="0.001" value="0"/>
+
+                        <div class="form-group">
+                            <label id="Maturity">Time to Maturity (τ) = <span>2.5</span> Years</label>
+                            <div id="sliderMaturity"></div>
+                        </div>
+                        <input id="sliderMaturityi" type="range" min="0" max="5" step="0.1" value="2.5"/>
+
                         <div class="form-group">
                             <label id="Volatility">Volatility (σ) = <span>40</span>%</label>
                             <div id="sliderVolatility"></div>
                         </div>
+                        <input id="sliderVolatilityi" type="range" min="0.05" max="0.5" step="0.01" value="0.4"/>
+
                     </form>
                 </div>
             </div>
-            <div id="divPrices" class="panel panel-primary" style="display: block">
+            <div id="divPrices" class="panel panel-default" style="display: block">
                 <div class="panel-heading">
                     <h3 class="panel-title">Prices</h3>
                 </div>
                 <div class="panel-body">
                     <div>
-                        <table class="table">
-                            <tr>
-                                <td style="font-weight: bold">Drift</td>
-                                <td id="Drift" style="text-align: right"><span></span>%</td>
-                                <td style="font-weight: bold; text-align: right">Forward</td>
-                                <td id="Forward" style="text-align: right"><span></span> $</td>
-                            </tr>
-                        </table>
                         <table class="table table-hover table-condensed">
                             <thead>
                             <tr>
-                                <th colspan="2"></th>
+                                <th></th>
                                 <th style="text-align: right"><span id="btnCall" class="on toggle">Call</span></th>
                                 <th style="text-align: right"><span id="btnPut" class="off toggle">Put</span></th>
                             </tr>
@@ -91,67 +94,84 @@
                             <tbody>
                             <tr>
                                 <td style="font-weight: bold">Premium</td>
-                                <td></td>
                                 <td id="callPremium" style="text-align: right"><span></span> $</td>
                                 <td id="putPremium" style="text-align: right"><span></span> $</td>
                             </tr>
                             <tr>
                                 <td style="font-weight: bold">Premium (%)</td>
-                                <td></td>
                                 <td id="callPremiumPct" style="text-align: right"><span></span>%</td>
                                 <td id="putPremiumPct" style="text-align: right"><span></span>%</td>
                             </tr>
                             <tr>
                                 <td style="font-weight: bold">Delta</td>
-                                <td></td>
                                 <td id="callDelta" style="text-align: right"><span></span></td>
                                 <td id="putDelta" style="text-align: right"><span></span></td>
                             </tr>
                             <tr>
                                 <td style="font-weight: bold">Gamma</td>
-                                <td></td>
                                 <td class="Gamma" style="text-align: right"><span></span></td>
                                 <td class="Gamma" style="text-align: right"><span></span></td>
                             </tr>
                             <tr>
                                 <td style="font-weight: bold">Vega</td>
-                                <td></td>
                                 <td class="Vega" style="text-align: right"><span></span></td>
                                 <td class="Vega" style="text-align: right"><span></span></td>
                             </tr>
                             <tr>
                                 <td style="font-weight: bold">Theta</td>
-                                <td></td>
                                 <td id="callTheta" style="text-align: right"><span></span></td>
                                 <td id="putTheta" style="text-align: right"><span></span></td>
                             </tr>
                             <tr>
                                 <td style="font-weight: bold">Rho</td>
-                                <td></td>
                                 <td id="callRho" style="text-align: right"><span></span></td>
                                 <td id="putRho" style="text-align: right"><span></span></td>
                             </tr>
                             </tbody>
                         </table>
+
+                        <span class="col-xs-6" style="padding-left:0px; padding-bottom:9px; font-size:14px">
+                            <strong>
+                                Drift (q-r) =
+                                <label id="Drift"><span></span>%</label>
+                            </strong>
+                        </span>
+                         <span class="col-xs-6" style="padding-left:0px;font-size:14px">
+                             <strong>
+                                 Fwd =
+                                 <label id="Forward"><span></span>$</label>
+                             </strong>
+                         </span>
+
                     </div>
                 </div>
             </div>
         </div>
         <div class="col-xs-6">
-            <div id="divGraphs" class="panel panel-primary">
+            <div id="divGraphs" class="panel panel-default">
                 <div class="panel-heading">
                     <div class="row pull-right" style="margin-top: -6px">
-                    <span class="displayInput"><label style="font-weight: normal"><input id="displaySpot"
-                                                                                         type="checkbox" checked>
-                        Spot</label></span>
-                    <span class="displayInput"><label style="font-weight: normal"><input id="displayForward"
-                                                                                         type="checkbox">
-                        Forward</label></span>
-                    <span class="displayInput"><label style="font-weight: normal"><input id="displayStrike"
-                                                                                         type="checkbox"> Strike</label></span>
+                    <span class="displayInput">
+                        <label style="font-weight: normal" class="toggle">
+                            <input id="displaySpot" type="checkbox" checked>
+                            Spot
+                        </label>
+                    </span>
+                    <span class="displayInput toggle">
+                        <label style="font-weight: normal" class="toggle">
+                            <input id="displayForward" type="checkbox">
+                            Forward
+                        </label>
+                    </span>
+                    <span class="displayInput toggle">
+                        <label style="font-weight: normal" class="toggle">
+                            <input id="displayStrike" type="checkbox">
+                            Strike
+                        </label>
+                    </span>
                         <div class="btn-group displayInput">
-                            <button type="button" id="btnCall1" class="btn btn-sm btn-primary active">Call</button>
-                            <button type="button" id="btnPut1" class="btn btn-sm btn-primary">Put</button>
+                            <button type="button" id="btnCall1" class="btn btn-sm btn-default active">Call</button>
+                            <button type="button" id="btnPut1" class="btn btn-sm btn-default">Put</button>
                         </div>
                     </div>
                     <h3 class="panel-title">Graphs <span>(Call)</span></h3>
