--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="row">
-        <div class="col-xs-6">
+        <div class="col-xs-12 col-sm-6">
             <div id="divParameters" class="panel panel-default" style="display: block">
                 <div class="panel-heading">
                     <button id="btnReset" class="btn btn-default btn-xs pull-right"><i class="fa fa-undo"
@@ -37,7 +37,7 @@
                     <h3 class="panel-title">Parameters</h3>
                 </div>
                 <div class="panel-body">
-                    <form class="col-xs-12" role="form">
+                    <form role="form">
                         <div class="form-group">
                             <label id="Stock">Stock Price (S) = <span>100</span> $</label>
                             <input class="slider" id="sliderStock" type="range" min="1" max="200" step="1"
@@ -77,13 +77,13 @@
                     </form>
                 </div>
             </div>
-            <div id="divPrices" class="panel panel-default" style="display: block">
+            <div id="divPrices" class="panel panel-default call" style="display: block">
                 <div class="panel-heading">
                     <h3 class="panel-title">Prices</h3>
                 </div>
                 <div class="panel-body">
                     <div>
-                        <table class="table table-hover table-condensed">
+                        <table class="table table-striped table-condensed">
                             <thead>
                             <tr>
                                 <th></th>
@@ -94,49 +94,49 @@
                             <tbody>
                             <tr>
                                 <td style="font-weight: bold">Premium</td>
-                                <td id="callPremium" style="text-align: right"><span></span> $</td>
-                                <td id="putPremium" style="text-align: right"><span></span> $</td>
+                                <td class="call" id="callPremium" style="text-align: right"><span></span> $</td>
+                                <td class="put" id="putPremium" style="text-align: right"><span></span> $</td>
                             </tr>
                             <tr>
                                 <td style="font-weight: bold">Premium (%)</td>
-                                <td id="callPremiumPct" style="text-align: right"><span></span>%</td>
-                                <td id="putPremiumPct" style="text-align: right"><span></span>%</td>
+                                <td class="call" id="callPremiumPct" style="text-align: right"><span></span>%</td>
+                                <td class="put" id="putPremiumPct" style="text-align: right"><span></span>%</td>
                             </tr>
                             <tr>
                                 <td style="font-weight: bold">Delta</td>
-                                <td id="callDelta" style="text-align: right"><span></span></td>
-                                <td id="putDelta" style="text-align: right"><span></span></td>
+                                <td class="call" id="callDelta" style="text-align: right"><span></span></td>
+                                <td class="put" id="putDelta" style="text-align: right"><span></span></td>
                             </tr>
                             <tr>
                                 <td style="font-weight: bold">Gamma</td>
-                                <td class="Gamma" style="text-align: right"><span></span></td>
-                                <td class="Gamma" style="text-align: right"><span></span></td>
+                                <td class="Gamma call" style="text-align: right"><span></span></td>
+                                <td class="Gamma put" style="text-align: right"><span></span></td>
                             </tr>
                             <tr>
                                 <td style="font-weight: bold">Vega</td>
-                                <td class="Vega" style="text-align: right"><span></span></td>
-                                <td class="Vega" style="text-align: right"><span></span></td>
+                                <td class="Vega call" style="text-align: right"><span></span></td>
+                                <td class="Vega put" style="text-align: right"><span></span></td>
                             </tr>
                             <tr>
                                 <td style="font-weight: bold">Theta</td>
-                                <td id="callTheta" style="text-align: right"><span></span></td>
-                                <td id="putTheta" style="text-align: right"><span></span></td>
+                                <td class="call" id="callTheta" style="text-align: right"><span></span></td>
+                                <td class="put" id="putTheta" style="text-align: right"><span></span></td>
                             </tr>
                             <tr>
                                 <td style="font-weight: bold">Rho</td>
-                                <td id="callRho" style="text-align: right"><span></span></td>
-                                <td id="putRho" style="text-align: right"><span></span></td>
+                                <td class="call" id="callRho" style="text-align: right"><span></span></td>
+                                <td class="put" id="putRho" style="text-align: right"><span></span></td>
                             </tr>
                             </tbody>
                         </table>
 
-                        <span class="col-xs-6" style="padding-left:0px; padding-bottom:9px; font-size:14px">
+                        <span style="padding-left:0px; padding-bottom:9px; font-size:14px">
                             <strong>
                                 Drift (q-r) =
                                 <label id="Drift"><span></span>%</label>
                             </strong>
                         </span>
-                         <span class="col-xs-6" style="padding-left:0px;font-size:14px">
+                         <span style="padding-left:0px;font-size:14px">
                              <strong>
                                  Fwd =
                                  <label id="Forward"><span></span>$</label>
@@ -147,7 +147,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-xs-6">
+        <div class="col-xs-12 col-sm-6">
             <div id="divGraphs" class="panel panel-default">
                 <div class="panel-heading">
                     <div class="row pull-right" style="margin-top: -6px">
@@ -169,10 +169,6 @@
                             Strike
                         </label>
                     </span>
-                        <div class="btn-group displayInput">
-                            <button type="button" id="btnCall1" class="btn btn-sm btn-default active">Call</button>
-                            <button type="button" id="btnPut1" class="btn btn-sm btn-default">Put</button>
-                        </div>
                     </div>
                     <h3 class="panel-title">Graphs <span>(Call)</span></h3>
                 </div>
