--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
     <title>FFI Options</title>
 </head>
 <body style="">
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-xs-12">
             <h1>Black-Scholes and Greeks</h1>
@@ -31,8 +31,8 @@
         <div class="col-xs-12 col-sm-6">
             <div id="divParameters" class="panel panel-default" style="display: block">
                 <div class="panel-heading">
-                    <button id="btnReset" class="btn btn-default btn-xs pull-right"><i class="fa fa-undo"
-                                                                                       aria-hidden="true"></i>
+                    <button id="btnReset" class="btn btn-default btn-xs pull-right">
+                        <i class="fa fa-undo" aria-hidden="true"></i>
                     </button>
                     <h3 class="panel-title">Parameters</h3>
                 </div>
@@ -150,7 +150,7 @@
         <div class="col-xs-12 col-sm-6">
             <div id="divGraphs" class="panel panel-default">
                 <div class="panel-heading">
-                    <div class="row pull-right" style="margin-top: -6px">
+                    <div class="row pull-right">
                     <span class="displayInput">
                         <label style="font-weight: normal" class="toggle">
                             <input id="displaySpot" type="checkbox" checked>
