--- a/web/index.html
+++ b/web/index.html
@@ -7,19 +7,19 @@
     <link href="css/index.css" rel="stylesheet">
     
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="jquery/ui/jquery-ui.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
-    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="jquery/jquery-1.11.3.min.js"></script>
+    <script src="jquery/jquery-migrate-1.2.1.min.js"></script>
     <script src="jquery/ui/jquery-ui.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/d3.3.5.5.min.js" charset="utf-8"></script>
     <title>FFI Options</title>
 </head>
 
