All data toFixed

--- a/web/index.html
+++ b/web/index.html
@@ -111,13 +111,11 @@
                 </tr>
                 <tr>
                     <td style="font-weight: bold">Gamma</td>
-                    <td class="Gamma call" style="text-align: right"><span></span></td>
-                    <td class="Gamma put" style="text-align: right"><span></span></td>
+                    <td colspan="2" class="Gamma" style="text-align: center"><span></span></td>
                 </tr>
                 <tr>
                     <td style="font-weight: bold">Vega</td>
-                    <td class="Vega call" style="text-align: right"><span></span></td>
-                    <td class="Vega put" style="text-align: right"><span></span></td>
+                    <td colspan="2" class="Vega" style="text-align: center"><span></span></td>
                 </tr>
                 <tr>
                     <td style="font-weight: bold">Theta</td>
